# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiignore  .gitignore  Dockerfile.arch-bootstrap-test  Dockerfile.arch-bootstrap-test-ci  Dockerfile.arch-test  Dockerfile.arch-test-ci  Dockerfile.fedora-test  Dockerfile.fedora-test-ci  README.md  dot_bashrc.tmpl  dot_gitconfig.tmpl  dot_profile.tmpl  justfile  run_once_install-packages.sh.tmpl  run_once_set-iterm2-default-profile.sh.tmpl
.github/workflows/: install-script.yml
dot_config/: topgrade.toml
dot_config/alacritty/: alacritty.toml
dot_config/fish/: config.fish  config.fish.tmpl
dot_config/fish/functions/: custom.fish  dots.fish  dotsetup.fish  extract.fish  glog.fish  mkfile.fish  serve.fish  sysinfo.fish
dot_config/hypr/: hyprland.lua
dot_config/nvim/lua/plugins/: user.lua
installer/: Cargo.toml  packages.toml
installer/src/: cli.rs  helpers.rs  main.rs  packages.rs  platform.rs
installer/src/installers/: arch.rs  fedora.rs  installer.rs  mac.rs  mod.rs
private_dot_gnupg/: private_gpg-agent.conf.tmpl
private_dot_ssh/: config.tmpl
wiki/: Bitwarden-SSH.md  Install-Script-Testing.md  Installed-Tools.md  Managing-Dotfiles.md  Setup.md  TODO.md  Template-Verification.md
