[package]
name = "installer"
version = "0.1.0"
edition = "2024"
default-run = "dotsetup"

[[bin]]
name = "dotsetup"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.3"
indicatif = "0.18.4"
inquire = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
thiserror = "2.0.18"
toml = "1.1.2"
which = "8.0.3"
